--- a/src/PalcoNet/App.config
+++ b/src/PalcoNet/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+	<connectionStrings>
+    <add name = "conexion" connectionString = "Data Source=LARBSJ4MB0N2\SQLSERVER2012;Initial Catalog=GD2C2018;user=sa;password=Miclave.1" />
+    </connectionStrings>
 </configuration>
