--- a/src/PalcoNet/PalcoNet.csproj
+++ b/src/PalcoNet/PalcoNet.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Abm Rol\Alta_Rol.Designer.cs">
       <DependentUpon>Alta_Rol.cs</DependentUpon>
     </Compile>
+    <Compile Include="Abm Rol\Baja_Rol.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Abm Rol\Baja_Rol.Designer.cs">
+      <DependentUpon>Baja_Rol.cs</DependentUpon>
+    </Compile>
     <Compile Include="Abm Rol\Modificacion_Rol.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Rol\Alta_Rol.resx">
       <DependentUpon>Alta_Rol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Abm Rol\Baja_Rol.resx">
+      <DependentUpon>Baja_Rol.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Rol\Modificacion_Rol.resx">
       <DependentUpon>Modificacion_Rol.cs</DependentUpon>
