--- a/src/PalcoNet/App.config
+++ b/src/PalcoNet/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 	<connectionStrings>
-    <add name = "conexion" connectionString = "Data Source=LARBSJ4MB0N2\SQLSERVER2012;Initial Catalog=GD2C2018;user=sa;password=Miclave.1" />
+    <add name = "conexion" connectionString = "Data Source=localhost\SQLSERVER2012;Initial Catalog=GD2C2018;user=gdespectaculos2018;password=gd2019" />
     </connectionStrings>
 </configuration>
