--- a/src/PalcoNet/PalcoNet.csproj
+++ b/src/PalcoNet/PalcoNet.csproj
@@ -142,6 +142,12 @@
     <Compile Include="Canje Puntos\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Comprar\Comprar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Comprar\Comprar.Designer.cs">
+      <DependentUpon>Comprar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Comprar\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,7 +155,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Datos\Funcionalidad.cs" />
+    <Compile Include="Datos\Categoria.cs" />
     <Compile Include="Datos\Grado.cs" />
+    <Compile Include="Datos\Compra.cs" />
     <Compile Include="Datos\Publicacion.cs" />
     <Compile Include="Datos\Rol.cs" />
     <Compile Include="Datos\Rubro.cs" />
@@ -265,6 +273,12 @@
     <EmbeddedResource Include="Abm Rol\Funcionalidad_Modif.resx">
       <DependentUpon>Funcionalidad_Modif.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Comprar\Comprar.resx">
+      <DependentUpon>Comprar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Comprar\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Generar Publicacion\Generar_Publicacion.resx">
       <DependentUpon>Generar_Publicacion.cs</DependentUpon>
     </EmbeddedResource>
@@ -305,9 +319,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Abm Cliente\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
