--- a/src/PalcoNet/PalcoNet.csproj
+++ b/src/PalcoNet/PalcoNet.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Abm Cliente\Alta_Cliente.Designer.cs">
       <DependentUpon>Alta_Cliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="Abm Cliente\Baja_Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Abm Cliente\Baja_Cliente.Designer.cs">
+      <DependentUpon>Baja_Cliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Abm Empresa Espectaculo\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -251,6 +257,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Cliente\Alta_Cliente.resx">
       <DependentUpon>Alta_Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Abm Cliente\Baja_Cliente.resx">
+      <DependentUpon>Baja_Cliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Grado\ABMGrado.resx">
       <DependentUpon>ABMGrado.cs</DependentUpon>
