--- a/src/PalcoNet/App.config
+++ b/src/PalcoNet/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 	<connectionStrings>
-    <add name = "conexion" connectionString = "Data Source=localhost\SQLSERVER2012;Initial Catalog=GD2C2018;user=gdespectaculos2018;password=Miclave.1" />
+    <add name = "conexion" connectionString = "Data Source=localhost\SQLSERVER2012;Initial Catalog=GD2C2018;user=gdespectaculos2018;password=gd2018" />
     </connectionStrings>
 	<appSettings>
 		<add key ="nowdate" value="2018/12/28 00:00:00" />
