--- a/src/PalcoNet/PalcoNet.csproj
+++ b/src/PalcoNet/PalcoNet.csproj
@@ -148,12 +148,19 @@
     <Compile Include="Comprar\Comprar.Designer.cs">
       <DependentUpon>Comprar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Comprar\Form1.cs">
+    <Compile Include="Comprar\ComprarUbicacion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Comprar\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Comprar\ComprarUbicacion.Designer.cs">
+      <DependentUpon>ComprarUbicacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Comprar\ComprarUbicacionTarjeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Comprar\ComprarUbicacionTarjeta.Designer.cs">
+      <DependentUpon>ComprarUbicacionTarjeta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Datos\Tarjeta.cs" />
     <Compile Include="Datos\Funcionalidad.cs" />
     <Compile Include="Datos\Categoria.cs" />
     <Compile Include="Datos\Grado.cs" />
@@ -288,9 +295,12 @@
     <EmbeddedResource Include="Comprar\Comprar.resx">
       <DependentUpon>Comprar.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Comprar\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-	</EmbeddedResource>
+    <EmbeddedResource Include="Comprar\ComprarUbicacion.resx">
+      <DependentUpon>ComprarUbicacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Comprar\ComprarUbicacionTarjeta.resx">
+      <DependentUpon>ComprarUbicacionTarjeta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Editar Publicacion\Editar_formulario.resx">
       <DependentUpon>Editar_formulario.cs</DependentUpon>
     </EmbeddedResource>
