Listado Estadistico completo

--- a/src/PalcoNet/PalcoNet.csproj
+++ b/src/PalcoNet/PalcoNet.csproj
@@ -215,6 +215,10 @@
     <Compile Include="Comprar\ComprarUbicacionTarjeta.Designer.cs">
       <DependentUpon>ComprarUbicacionTarjeta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Datos\CantidadCompras.cs" />
+    <Compile Include="Datos\Listado.cs" />
+    <Compile Include="Datos\LocalidadesNoVendidas.cs" />
+    <Compile Include="Datos\PuntosVencidos.cs" />
     <Compile Include="Datos\Tarjeta.cs" />
     <Compile Include="Datos\Funcionalidad.cs" />
     <Compile Include="Datos\Categoria.cs" />
@@ -257,6 +261,12 @@
     </Compile>
     <Compile Include="Herramientas\Encrypter.cs" />
     <Compile Include="Herramientas\Funcionalidades_Pantallas.cs" />
+    <Compile Include="Listado Estadistico\Listado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Listado Estadistico\Listado.Designer.cs">
+      <DependentUpon>Listado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login\MenuPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -415,6 +425,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Historial Cliente\HistorialCliente.resx">
       <DependentUpon>HistorialCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Listado Estadistico\Listado.resx">
+      <DependentUpon>Listado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\MenuPrincipal.resx">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
